<resources>
    <string name="app_name">Rugby Scores</string>
    <string name="try5">try +5pts</string>
    <string name="dGoal">Drop goal +3pts</string>
    <string name="penalty">Penalty +3pts</string>
    <string name="conversion">conversion +2pts</string>
    <string name="initValue">0</string>
    <string name="teamA">Team A</string>
    <string name="teamB">Team B</string>
    <string name="resetButton">Reset</string>


</resources>
