<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rugby">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            tools:context=".MainActivity">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="8dp">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:text="@string/teamA"
                    android:textAlignment="center"
                    android:textColor="@color/colorTeam"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/scoreForA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/initValue"
                    android:textAlignment="center"
                    android:textColor="#e6e6e6"
                    android:textSize="40sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@color/colorButton"
                    android:onClick="fivePointsForA"
                    android:text="@string/try5"
                    android:textColor="@color/colorFont" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@color/colorButton"
                    android:onClick="threePointsForA"
                    android:text="@string/dGoal"
                    android:textColor="@color/colorFont" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@color/colorButton"
                    android:onClick="threePointsForA"
                    android:text="@string/penalty"
                    android:textColor="@color/colorFont" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@color/colorButton"
                    android:onClick="twoPointsForA"
                    android:text="@string/conversion"
                    android:textColor="@color/colorFont" />

            </LinearLayout>

            <View
                android:layout_width="3dp"
                android:layout_height="match_parent"
                android:background="#000" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="8dp">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:text="@string/teamB"
                    android:textAlignment="center"
                    android:textColor="@color/colorTeam"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/scoreForB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/initValue"
                    android:textAlignment="center"
                    android:textColor="#e6e6e6"
                    android:textSize="40sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@color/colorButton"
                    android:onClick="fivePointsForB"
                    android:text="@string/try5"
                    android:textColor="@color/colorFont" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@color/colorButton"
                    android:onClick="threePointsForB"
                    android:text="@string/dGoal"
                    android:textColor="@color/colorFont" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@color/colorButton"
                    android:onClick="threePointsForB"
                    android:text="@string/penalty"
                    android:textColor="@color/colorFont" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@color/colorButton"
                    android:onClick="twoPointsForB"
                    android:text="@string/conversion"
                    android:textColor="@color/colorFont" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="32dp"
            android:background="@color/colorButton"
            android:onClick="resetScores"
            android:text="@string/resetButton"
            android:textColor="@color/colorFont" />
    </LinearLayout>

</ScrollView>
